--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -28,6 +28,9 @@
         { "roles", "Roles" },
         { "categorias", "Categorías" },
         { "subcategorias", "Sub Categorías" },
+        { "marcas", "Marcas" },
+        // { "subcategorias", "Sub Categorías" },
+        // { "subcategorias", "Sub Categorías" },
         { "empresa", "Empresa" }
     };
 
