CRUD Unidades de Medida, filtros y ordenamiento.

--- a/CreArte/Views/Marcas/Index.cshtml
+++ b/CreArte/Views/Marcas/Index.cshtml
@@ -18,7 +18,7 @@
     }
 }
 
-@section Styles{
+@* @section Styles{
 <style>
 .ua-popover-wrap{ position:relative; }
 .ua-popover{
@@ -35,7 +35,7 @@
 .ua-option{ display:block; margin-top:4px; }
 /* Encabezados “pill” (están en tu CSS base, se respetan al usar ua-th/ua-sort/ua-title) */
 </style>
-}
+} *@
 
 <div class="container-fluid py-3">
 
