--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -29,7 +29,7 @@
         { "categorias", "Categorías" },
         { "subcategorias", "Sub Categorías" },
         { "marcas", "Marcas" },
-        // { "subcategorias", "Sub Categorías" },
+        { "unidadesmedida", "Unidades de Medida" },
         // { "subcategorias", "Sub Categorías" },
         { "empresa", "Empresa" }
     };
